--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,13 @@
 # main links
 main:
+  - title: "About"
+    url: /_pages/About.md
+  - title: "Posts"
+    url: /_posts
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
