--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "About"
-    url: /_pages/About.md
+    url: /about/
   - title: "Posts"
     url: /_posts
   - title: "Quick-Start Guide"
