--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ locale                   : "zh-CN"
 title                    : "一个兴趣使然的blog"
 title_separator          : "|"
 name                     : "AQ"
-description              : " "
+description              : "A blog"
 url                      : "https://anranq96.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/a-normal-blog" # the subpath of your site, e.g. "/blog"
 repository               : "AnranQ96/a-normal-blog" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : /assets/images/logo.png # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -64,8 +64,8 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -107,9 +107,9 @@ analytics:
 # Site Author
 author:
   name             : "Anran"
-  avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "A regular college student."
-  location         : "Somewhere"
+  avatar           : "/assets/images/bio-photo.gif" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  bio              : "A college student."
+  location         : "Ontario, CA"
   email            :
   links:
     - label: "Email"
@@ -219,9 +219,9 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 5 # amount of posts to show
+paginate: 3 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Etc/GMT+4 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
@@ -301,3 +301,10 @@ defaults:
     values:
       layout: single
       author_profile: true
+  
+  # _foo
+  - scope:
+      path: ""
+      type: foo
+    values:
+      layout: single
